<resources>
    <string name="test">Test</string>
    <string name="app_name">proTip</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="version">v.1.0</string>
    <string name="register">Register at www.protip.net</string>
    <string name="title">Info</string>
    <string name="proTipUser">proTipUser</string>
    <string name="ok">OK</string>
</resources>
